--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2018-03-19  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
+2018-03-19  Robrecht Cannoodt  <rcannood@gmail.com>
 
 	* DESCRIPTION (Version): New version is 1.1-13.
 
