--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,12 @@
 2018-06-11  Robrecht Cannoodt  <rcannood@gmail.com>
 
-	* DESCRIPTION (Version): New version is 1.1-13.
-	* principal.curve.R (startCircle): Fix startCircle when d<2.
+	* DESCRIPTION (Version): New version is 2.0.0.
+	* renamed principal.curve to principal_curve
+	* renamed get.lam to get_lam
+	* Fix start_circle when d < 2.
 	* Use roxygen2 for the documentation
 	* Fix code formatting
+	* Added tests for get_lam and principal_curve
 
 
 2013-04-25  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
