--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(fig.path=".readme_files/", warning = FALSE, message = FALS
 # princurve
 [![Build Status](https://travis-ci.org/dynverse/princurve.svg?branch=master)](https://travis-ci.org/dynverse/princurve)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/dynverse/princurve?branch=master&svg=true)](https://ci.appveyor.com/project/dynverse/princurve)
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/dplyr)](https://cran.r-project.org/package=dplyr)
+[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/princurve)](https://cran.r-project.org/package=princurve)
 [![Coverage Status](https://codecov.io/gh/dynverse/princurve/branch/master/graph/badge.svg)](https://codecov.io/gh/dynverse/princurve?branch=master)
 
 This is an R port of Trevor Hastie's Principal Curve package.
@@ -21,6 +21,7 @@ This is an R port of Trevor Hastie's Principal Curve package.
 ## Example
 ```{r}
 library(princurve)
+set.seed(1)
 x <- runif(100, -1, 1)
 x <- cbind(x, x ^ 2 + rnorm(100, sd = 0.1))
 
