--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,119 +1,146 @@
-2018-07-05  Robrecht Cannoodt  <rcannood@gmail.com>
-  * Updated DESCRIPTION: New version is 2.0.4
-  * Fixed issues with legacy principal.curve and get.lam
-  * Added test for making sure that principal.curve and get.lam
-    almost exactly the same output as version 1.1-12.
+princurve 2.0.4 (unreleased)
 
-2018-07-04  Robrecht Cannoodt  <rcannood@gmail.com>
-  * Updated DESCRIPTION: New version is 2.0.3
-  * travis.yml: oldrel and release on osx and linux
-  * Reimplemented project_to_curve completely in Rcpp, completely removing all fortran code from princurve.
-  * Improved tests to ensure project_to_curve works exactly as legacy get.lam.
+  * BUG FIX: Fixed issues with legacy `principal.curve()` and `get.lam()` (#8).
 
-2018-06-12  Robrecht Cannoodt  <rcannood@gmail.com>
-  * Updated DESCRIPTION: New version is 2.0.2
-  * De-deprecate get.lam and principal.curve as not to break
-    depending packages on CRAN. Will contact the authors to update
-    their packages, as these functions will be redeprecated
-    on 2018-07-01.
-  * Rename get_lam to project_to_curve
+  * TESTING: Perform direct comparison between the current princurve and
+    princurve 1.1-12 to check whether `principal.curve()` and `get.lam()` produce
+    output with exactly the same format and almost exactly the same values.
 
-2018-06-11  Robrecht Cannoodt  <rcannood@gmail.com>
-  * Updated DESCRIPTION: New version is 2.0.1
-  * Fix issues with the readme
+  * SIGNIFICANT CHANGE: Remove the `ord` parameter from `project_to_curve()`,
+    in order to reduce the amount of Rcpp code a little bit.
 
-2018-06-11  Robrecht Cannoodt  <rcannood@gmail.com>
-  * Updated DESCRIPTION: New version is 2.0.0
-  * Fixed bug in start_circle when d < 2.
-  * Use roxygen2 for the documentation
-  * Fix code formatting
-  * Added tests for get_lam and principal_curve
-  * Added automated testing using travis-ci.org and ci.appveyor.com
+  * DOCUMENTATION: Improved citations (#10).
 
-2013-04-25  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-12.
-  * src/sortdi.f (sortdi): Fix Fortran array bounds problem.
+  * DOCUMENTATION: Improved news (#11).
 
-2011-09-18  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-11.
-  * R/principal.curve.R:
-  * man/principal.curve.Rd: Move whiskers() from code to example.
-  * NAMESPACE: Added.
+princurve 2.0.3 (2018-07-04)
 
-2009-10-04  Kurt Hornik  <Kurt.Hornik@wu.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-10.
-  * R/principal.curve.R (principal.curve):
-  * man/principal.curve.Rd: Enhancements by Henrik Bengtsson <hb@stat.berkeley.edu>.
+  * SIGNIFICANT CHANGES: Reimplemented `project_to_curve()` completely in
+    Rcpp, thereby completely removing all Fortran code from princurve.
 
-2009-07-15
-  * principal.curve MEMORY OPTIMIZATION: Now the result matrix
-  allocated as doubles, not logicals (as NA is), in order to
-  prevent a coersion.
+  * TESTING: test both on linux and osx.
 
-2009-02-08
-  * BUG FIX: An error was thrown if 'smoother' was a function.
-  * Cleaned up source code (removed comments).
+  * TESTING: Added tests to ensure `project_to_curve()` works similar to
+    legacy `get.lam()`.
 
-2008-05-27
-  * Benchmarking: For larger data sets, most of the time is spent in
-    get.lam().
-  * BUG FIX: smooth.spline(x,y) will only use *and* return values for
+princurve 2.0.2 (2018-06-12)
+
+  * MAINTAINER: Changed the maintainer from Andreas Weingessel
+    to Robrecht Cannoodt.
+
+  * SIGNIFICANT CHANGES: Added functions `principal_curve()` and
+    `project_to_curve()` with a slightly different interface than
+    `principal.curve()` and `get.lam()`.
+
+  * DEPRECATION: Prepare `get.lam()` and `principal.curve()` for deprecation
+    planned on 2018-07-01.  Will contact maintainers of reverse depending
+    packages.
+
+  * BUG FIX: Allow `start_circle()` to work when the number of dimensions
+    is larger than 2.
+
+  * DOCUMENTATION: Rewrite the README in markdown.
+
+  * DOCUMENTATION: Use roxygen2 for the documentation.
+
+  * MINOR CHANGES: Clean up code to ensure consistent code formatting.
+
+  * TESTING: Added tests for `principal_curve()` and `project_to_curve()`.
+
+  * TESTING: Enabled continuous integration using
+    [travis-ci.org](https://travis-ci.org/dynverse/princurve) and
+    [ci.appveyor.com](https://ci.appveyor.com/project/dynverse/princurve).
+
+princurve 1.1-12 (2013-04-25)
+
+  * BUG FIX: src/sortdi.f (sortdi): Fix Fortran array bounds problem.
+
+princurve 1.1-11 (2011-09-18)
+
+  * MINOR CHANGES: Update for R 2.0.
+
+  * DEPRECATION: Removed `whiskers()`
+
+princurve 1.1-10 (2009-10-04)
+
+  * BENCHMARKING: For larger data sets, most of the time is spent in `get.lam()`.
+
+  * BUG FIX: `smooth.spline(x,y)` will only use *and* return values for
     "unique" {x}:s. This means that the fitted {y}:s maybe be fewer than
-    the input vector. In order to control for this, we use predict().
-  * Now 'smoother' can also be a function taking arguments 'lambda', 'xj'
-    and '...' and return 'y' of the same length as 'lambda' and 'xj'.
-  * Now arguments 'start' and 'stretch' can be NULL, which behaves the
-    same as if they are "missing" [which is hard to emulate with for
-    instance do.call()].
-  * Added 'converged' and 'nbrOfIterations' to return structure.
+    the input vector. In order to control for this, we use `predict()`.
+
+  * NEW FEATURE: Now `smoother` can also be a function taking arguments
+    `lambda`, `xj` and `...` and return `y` of the same length
+    as `lambda` and `xj`.
+
+  * NEW FEATURE `principal.curve()`: Arguments `start` and `stretch`
+    can be NULL, which behaves the same as if they are "missing"
+    [which is hard to emulate with for instance `do.call()`].
+
+  * NEW FEATURE: Added `converged` and `nbrOfIterations` to return structure.
+
   * SPEED UP/MEMORY OPTIMIZATION: Now the nxp matrix 's' is allocated only
     once. Before it was built up using cbind() once per iteration.
+
   * SPEED UP: Now the smoother function is identified/created before
     starting the algorithm, and not once per dimension and iteration.
 
-2007-07-12  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-9.
-  (License): Clarify.
+  * MEMORY OPTIMISATION `principal.curve()`: Now the result matrix
+    allocated as doubles, not logicals (as NA is), in order to
+    prevent a coersion.
 
-2006-10-04  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-8.
-  (License): Standardize.
+  * BUG FIX: An error was thrown if `smoother` was a function.
 
-2004-11-04  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-7.
-  (Depends): Depend on R >= 1.9.0.
-  (License): Changed to GPL 2 or better as granted by Trevor
-  Hastie.
+  * MINOR CHANGES: Cleaned up source code (removed comments).
 
-2004-11-03  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * R/principal.curve.R: Stop requiring the now defunct 'modreg'.
+princurve 1.1-9 (2007-07-12)
 
-2004-01-31  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION (Version): New version is 1.1-6.
-  * INDEX: Removed.
+  * MINOR CHANGE: Clarify license.
 
-2002-07-03  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION: New version is 1.1-5.
-  * R/principal.curve.R: Add 'PACKAGE' argument to FF calls.
+princurve 1.1-8 (2006-10-04)
 
-2002-07-02  Kurt Hornik  <Kurt.Hornik@wu-wien.ac.at>
-  * DESCRIPTION: New version is 1.1-4.
-  * man/principal.curve.Rd: T/F fixes.
+  * MINOR CHANGE: Update license and add depending packages.
 
-2001-06-10  Andreas Weingessel  <Andreas.Weingessel@ci.tuwien.ac.at>
-  * Version 1.1-2: Changed keyword entries to fit R standard.
+princurve 1.1-7 (2004-11-04)
 
-2001-01-31  Andreas Weingessel  <Andreas.Weingessel@ci.tuwien.ac.at>
-  * Changed definition of v in line 58 of getlam.f from
-  double precision v(2,10)
-  to
-  double precision v(2,p)
+  * MINOR CHANGE: Depend on R >= 1.9.0
 
-2000-12-27  Andreas Weingessel  <Andreas.Weingessel@ci.tuwien.ac.at>
-  * Version 1.1-0: Changes in the DESCRIPTION file to fit R-1.2.0.
-  Various improvments in the documentation: Added alias
-  entries, a description entry for principal.curve, default values
-  and entries for the undocumented objects.
-  Changed F to FALSE in the R code.
+  * MINOR CHANGE: Changed license to GPL version 2 or newer,
+    as granted by Trevor Hastie.
 
+  * MINOR CHANGE: Don't require defunct `modreg`.
 
+princurve 1.1-6 (2004-01-31)
+
+  * MINOR CHANGE: Removed INDEX.
+
+princurve 1.1-5 (2002-07-03)
+
+  * MINOR CHANGE: Added `PACKAGE` to Fortran calls.
+
+princurve 1.1-4 (2002-07-02)
+
+  * MINOR CHANGES: Change all `T` to `TRUE`.
+
+princurve 1.1-2 (2001-06-10)
+
+  * MINOR CHANGE `plot.principal.curve()`: Rename argument `object` to `x`.
+
+  * MINOR CHANGE `lines.principal.curve()`: Rename argument `object` to `x`.
+
+  * MINOR CHANGE `points.principal.curve()`: Rename argument `object` to `x`.
+
+  * MINOR CHANGE: Rename internal function`start.circle()` to `startCircle()`.
+
+princurve 1.1-0 (2000-12-27)
+
+  * DESCRIPTION: Added Title and Maintainer field.
+
+  * MINOR CHANGES: Changed `F` to `FALSE`.
+
+  * DOCUMENTATION: Added keywords to `get.lam()`.
+
+  * DOCUMENTATION: Expanded documentation of `principal.curve()`:
+    added default values to usage, description, keywords and aliases.
+
+  * MINOR CHANGES: Changed precision in `getlam.f` from `v(2,10)` to `v(2,p)`.
