--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+princurve 2.0.5 (unreleased)
+
+  * BUG FIX `principal_curve()`: avoid division by zero when the initial principal curve
+    has already converged.
+  
+  * BUG FIX `project_to_curve()`: set dimension names of outputted `s` correctly.
+
 princurve 2.0.4 (2018-07-09)
 
   * BUG FIX: Fixed issues with legacy `principal.curve()` and `get.lam()` (#8).
@@ -13,7 +20,7 @@ princurve 2.0.4 (2018-07-09)
 
   * DOCUMENTATION: Improved news (#11).
 
-  * SPEED UP `project_to_curve`: Do not compute `lambda` accurately as it
+  * SPEED UP `project_to_curve()`: Do not compute `lambda` accurately as it
     is only used to order the points in `x`.
 
   * MINOR CHANGE: Added `...` argument to `whiskers()`.
