--- a/inst/NEWS
+++ b/inst/NEWS
@@ -6,6 +6,18 @@ princurve 2.0.5 (unreleased)
   * BUG FIX `project_to_curve()`: set dimension names of outputted `s` correctly.
   
   * DOCUMENTATION: Added `cran-comments.md` and `revdep` to repository.
+  
+  * MINOR CHANGE: Removed `adjust_range()`; use `grDevices::extendrange()` instead.
+  
+  * TESTING `start_circle()`: Added unit tests.
+  
+  * BUG FIX `start_circle()`: Make sure circle is centered and scaled correctly.
+  
+  * MINOR CHANGE: Move smoother functions from inside `principal_curve()` to 
+    a list `smoother_functions`.
+    
+  * TESTING `smoother_functions`: Added tests to ensure each of the smoother
+    functions work correctly.
 
 princurve 2.0.4 (2018-07-09)
 
