--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,4 @@
-princurve 2.1.0 (unreleased)
+princurve 2.1.0 (2018-07-14)
 
   * BUG FIX `principal_curve()`: avoid division by zero when the initial principal curve
     has already converged.
