--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+princurve 2.1.2 (unreleased)
+  
+  * DOCUMENTATION: Use the `magick` package to generate animated GIFs in 
+    the vignette, instead of the `animation` package, because
+    `animation` uses `ffmpeg` which is not installed on all CRAN systems.
+
 princurve 2.1.1 (2018-07-23)
 
   * DOCUMENTATION: Added vignettes on the algorithm behind princurve and
