--- a/README.Rmd
+++ b/README.Rmd
@@ -88,7 +88,7 @@ ggif_lapply(seq(0, 10), function(it) {
 For more information on how to use the `princurve` package, check out the following resources:
  
  * Vignette: [Introduction to the princurve package](https://cran.r-project.org/web/packages/princurve/vignettes/intro.html)
- * Help files: `?principal_curve`
+ * Help file: `?principal_curve`
 
 ## Latest changes
 Check out `news(package = "princurve")` or [NEWS.md](inst/NEWS.md) for a full list of changes.
