--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,7 @@
 princurve 2.1.3 (2018-09-02)
   * Removed extra dependencies in princurve by removing vignettes; fixes #28.
+  
+  * Fully deprecated `principal.curve()` function.
 
 princurve 2.1.2 (2018-07-24)
   
