--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+princurve 2.1.4 (unreleased)
+
+  * Fix warning in `stats::approx()` due to changes made in R 3.6.
+  
+  * Defuncted `principal.curve()` and `get.lam()`.
+
 princurve 2.1.3 (2018-09-10)
 
   * Removed extra dependencies in princurve by removing vignettes; fixes #28.
