--- a/inst/NEWS
+++ b/inst/NEWS
@@ -124,8 +124,8 @@ princurve 2.0.2 (2018-06-12)
   * TESTING: Added tests for `principal_curve()` and `project_to_curve()`.
 
   * TESTING: Enabled continuous integration using
-    https://travis-ci.org/dynverse/princurve and
-    https://ci.appveyor.com/project/dynverse/princurve.
+    https://travis-ci.org/rcannood/princurve and
+    https://ci.appveyor.com/project/rcannood/princurve.
 
 princurve 1.1-12 (2013-04-25)
 
