--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,7 @@
 ---
 output:
   github_document:
-    html_preview: false
+    html_preview: true
 editor_options: 
   chunk_output_type: console
 ---
@@ -15,9 +15,11 @@ library(tidyverse)
 ```
 
 # princurve
-[![Build Status](https://travis-ci.org/rcannood/princurve.svg?branch=master)](https://travis-ci.org/rcannood/princurve)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/rcannood/princurve?branch=master&svg=true)](https://ci.appveyor.com/project/rcannood/princurve)
-[![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/princurve)](https://cran.r-project.org/package=princurve)
+[![CRAN Status](https://www.r-pkg.org/badges/version/princurve)](https://cran.r-project.org/package=princurve)
+[![CRAN Downloads](https://cranlogs.r-pkg.org/badges/princurve)](https://cran.r-project.org/package=princurve)
+[![DOI](https://zenodo.org/badge/125849601.svg)](https://zenodo.org/badge/latestdoi/125849601)  
+[![Travis Build Status](https://travis-ci.org/rcannood/princurve.svg?branch=master)](https://travis-ci.org/rcannood/princurve)
+[![AppVeyor Build status](https://ci.appveyor.com/api/projects/status/kqlxkg73jm3vmuwe?svg=true)](https://ci.appveyor.com/project/dynverse/princurve)
 [![Coverage Status](https://codecov.io/gh/rcannood/princurve/branch/master/graph/badge.svg)](https://codecov.io/gh/rcannood/princurve?branch=master)
 
 Fitting a principal curve to a data matrix in arbitrary dimensions.
