--- a/README.Rmd
+++ b/README.Rmd
@@ -47,12 +47,11 @@ plot(fit); whiskers(x, fit$s, col = "gray")
 See `?principal_curve` for more information on how to use the `princurve` package.
 
 ## Latest changes
-Check out `news(package = "princurve")` for a full list of changes.
+Check out `news(package = "princurve")` or [NEWS.md](NEWS.md) for a full list of changes.
 
-<!-- This section gets automatically generated from inst/NEWS.md, and also generates inst/NEWS -->
+<!-- This section gets automatically generated from NEWS.md -->
 
 ```{r news, results='asis', echo=FALSE}
-dynutils::update_news()
 cat(dynutils::recent_news())
 ```
 
