update readme, ci, pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,12 +15,14 @@ library(tidyverse)
 ```
 
 # princurve
+
+<!-- badges: start -->
 [![CRAN Status](https://www.r-pkg.org/badges/version/princurve)](https://cran.r-project.org/package=princurve)
 [![CRAN Downloads](https://cranlogs.r-pkg.org/badges/princurve)](https://cran.r-project.org/package=princurve)
 [![DOI](https://zenodo.org/badge/125849601.svg)](https://zenodo.org/badge/latestdoi/125849601)  
-[![R-CMD-check](https://github.com/rcannood/princurve/workflows/R-CMD-check/badge.svg)](https://github.com/rcannood/princurve/actions?query=workflow%3AR-CMD-check)
-[![Coverage Status](https://codecov.io/gh/rcannood/princurve/branch/master/graph/badge.svg)](https://codecov.io/gh/rcannood/princurve?branch=master)
-
+[![R-CMD-check](https://github.com/rcannood/princurve/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/rcannood/princurve/actions/workflows/R-CMD-check.yaml)
+<!-- badges: end -->
+  
 Fitting a principal curve to a data matrix in arbitrary dimensions.
 A principal curve is a smooth curve passing through the middle of a multidimensional dataset. 
 This package is an R/C++ reimplementation of the S/Fortran code provided by Trevor Hastie, 
